Fixed formio form column wrapping in Safari.

--- a/ng2-admin/src/app/theme/sass/formio/_formio.scss
+++ b/ng2-admin/src/app/theme/sass/formio/_formio.scss
@@ -9,6 +9,10 @@
 .formio-form {
 
   // Responsive Layout
+  .row {
+    flex-wrap: initial;
+  }
+
   .col {
     @include flex-basis(inherit);
   }
